openshift/rainyday/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rainyday
  namespace: rainyday
  labels:
    app.kubernetes.io/instance: rainyday-dev
    app.kubernetes.io/name: rainyday
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: rainyday-dev
      app.kubernetes.io/name: rainyday
      app.openshift.io/runtime: nodejs
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: rainyday-dev
        app.kubernetes.io/name: rainyday
        app.openshift.io/runtime: nodejs
    spec:
      containers:
        - name: rainyday
          image: quay.io/marrober/pacman:franc-2
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
