openshift/rainyday/deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rainyday
  namespace: rainyday
  labels:
    app.kubernetes.io/instance: rainyday-dev
    app.kubernetes.io/name: rainyday
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: rainyday-dev
    app.kubernetes.io/name: rainyday
    app.openshift.io/runtime: nodejs
