openshift/rainyday/deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rainyday
  namespace: rainyday
spec:
  path: /
  to:
    kind: Service
    name: rainyday
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
